trunk/Archive2/2d/f63629c2e0fb20/output
In file included from main.cpp:5:
In file included from /usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/cmath:44:
In file included from /usr/include/math.h:427:
/usr/include/x86_64-linux-gnu/bits/math-finite.h:177:1: error: unknown type name '__extern_always_inline'
__extern_always_inline double __NTH (lgamma (double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:177:24: error: expected unqualified-id
__extern_always_inline double __NTH (lgamma (double __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:186:1: error: unknown type name '__extern_always_inline'
__extern_always_inline float __NTH (lgammaf (float __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:186:24: error: expected unqualified-id
__extern_always_inline float __NTH (lgammaf (float __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:196:1: error: unknown type name '__extern_always_inline'
__extern_always_inline long double __NTH (lgammal (long double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:196:24: error: expected unqualified-id
__extern_always_inline long double __NTH (lgammal (long double __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:210:1: error: unknown type name '__extern_always_inline'
__extern_always_inline double __NTH (gamma (double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:210:24: error: expected unqualified-id
__extern_always_inline double __NTH (gamma (double __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:219:1: error: unknown type name '__extern_always_inline'
__extern_always_inline float __NTH (gammaf (float __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:219:24: error: expected unqualified-id
__extern_always_inline float __NTH (gammaf (float __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:229:1: error: unknown type name '__extern_always_inline'
__extern_always_inline long double __NTH (gammal (long double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:229:24: error: expected unqualified-id
__extern_always_inline long double __NTH (gammal (long double __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:307:1: error: unknown type name '__extern_always_inline'
__extern_always_inline double __NTH (tgamma (double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:307:24: error: expected unqualified-id
__extern_always_inline double __NTH (tgamma (double __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:314:1: error: unknown type name '__extern_always_inline'
__extern_always_inline float __NTH (tgammaf (float __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:314:24: error: expected unqualified-id
__extern_always_inline float __NTH (tgammaf (float __d))
                       ^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:322:1: error: unknown type name '__extern_always_inline'
__extern_always_inline long double __NTH (tgammal (long double __d))
^
/usr/include/x86_64-linux-gnu/bits/math-finite.h:322:24: error: expected unqualified-id
__extern_always_inline long double __NTH (tgammal (long double __d))
                       ^
main.cpp:346:1: warning: 'Quantizer' defined as a class template here but previously declared as a struct template [-Wmismatched-tags]
class Quantizer<float>
^
main.cpp:343:1: note: did you mean class here?
struct Quantizer;
^~~~~~
class
main.cpp:353:1: warning: 'Quantizer' defined as a class template here but previously declared as a struct template [-Wmismatched-tags]
class Quantizer<double>
^
main.cpp:343:1: note: did you mean class here?
struct Quantizer;
^~~~~~
class
2 warnings and 18 errors generated.
